--- a/.github/workflows/rr.yml
+++ b/.github/workflows/rr.yml
@@ -43,8 +43,11 @@ jobs:
           sudo timedatectl set-timezone "Asia/Shanghai"
 
           sudo apt update
-          sudo apt install -y jq cpio gettext
-          sudo snap install yq
+          sudo apt install -y gettext sed gawk jq qemu-utils cpio xz-utils lz4 lzma bzip2 gzip zstd
+          # sudo snap install yq
+          if ! command -v yq &>/dev/null || ! yq --version 2>/dev/null | grep -q "v4."; then
+            sudo wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq && sudo chmod +x /usr/bin/yq
+          fi
 
       # calculates the version number and push
       - name: Calculate version
@@ -58,7 +61,7 @@ jobs:
               VERSION="${{ inputs.version }}"
             else
               LATEST_TAG="$(curl -skLH "Authorization: token ${{ secrets.RRORG }}" "https://api.github.com/repos/RROrg/rr/releases" | jq -r ".[0].tag_name" 2>/dev/null)"
-              if [ -n "${LATEST_TAG}" -a "$(echo ${LATEST_TAG} | cut -d '.' -f 1,2)" = "$(date +'%y.%-m')" ]; then  # format %y.%-m.$i
+              if [ -n "${LATEST_TAG}" ] && [ "$(echo ${LATEST_TAG} | cut -d '.' -f 1,2)" = "$(date +'%y.%-m')" ]; then  # format %y.%-m.$i
                 VERSION="$(echo ${LATEST_TAG} | awk -F '.' '{$3=$3+1}1' OFS='.')"
               else
                 VERSION="$(date +'%y.%-m').0"
@@ -186,7 +189,7 @@ jobs:
               (cd $(dirname "${F}") && sha256sum $(basename "${F}")) >>sha256sum
               zip -9j "update-${VERSION}.zip" "${F}"
             fi
-          done < <(yq '.replace | explode(.) | to_entries | map([.key])[] | .[]' update-list.yml)
+          done <<<$(yq '.replace | explode(.) | to_entries | map([.key])[] | .[]' update-list.yml)
           zip -9j "update-${VERSION}.zip" sha256sum
 
           # updateall.zip
@@ -208,7 +211,7 @@ jobs:
               (cd $(dirname "${F}") && sha256sum $(basename "${F}")) >>sha256sum
               zip -9j "updateall-${VERSION}.zip" "${F}"
             fi
-          done < <(yq '.replace | explode(.) | to_entries | map([.key])[] | .[]' update-list.yml)
+          done <<<$(yq '.replace | explode(.) | to_entries | map([.key])[] | .[]' update-list.yml)
           zip -9j "updateall-${VERSION}.zip" sha256sum
 
           # sha256sum
